# reasoning

./: .gitignore  .gitmodules  LICENSE  _action_landmarks.csv  action_landmarks.csv  bash_call_landmarks.sh  compare_landmarks.py  downward_metrics.csv  environment.yml  log.txt  makefile  output.sas  pyproject.toml  replace.py  results.csv
data/benchmarks/: downward_metrics.sh
data/benchmarks/blocksworld/: blocksworld.py  generate_all.py  output.sas
data/benchmarks/blocksworld_backtrack/: blocksworld.py  domain.pddl  solver.py
data/benchmarks/logistics/: logistics.py  output.sas  solver.py
data/benchmarks/logistics_old/: logistics
data/benchmarks/miconic/: domain.pddl  miconic  miconic.py
data/benchmarks/minigrid/: grid_making.py  minigrid.py
data/experiments/: metrics.csv
data/raw/: structure.yaml
fast-downward/blocksworld/: p01.txt  p02.txt  p03.txt  p04.txt  p05.txt  p06.txt  p07.txt  p08.txt  p09.txt  p10.txt  p11.txt  p12.txt  p13.txt  p14.txt  p15.txt  p16.txt  p17.txt  p18.txt  p19.txt  p20.txt  p37.txt
notebooks/: qwen.ipynb  qwen_3.ipynb
scripts/: check_landmarks_usage.py  compare_landmarks.py  run-fd.sh  run_instances.py  run_instances.sh  run_relaxed_plans.py  script.py  transform_fd_solutions.py  visualize_blocksworld.py
src/configs/: gemini-2.0-flash-lite.yaml  gemini-2.5-flash-lite-thinking.yaml  gemini-2.5-flash-lite.yaml  gemini-thinking.yaml  gemini.yaml  gemma.yaml  qwen-3.yaml
src/reasoning/: generate.py  metrics.py  model.py  models.py  parser.py  prompt.py  settings.py  task.py  utils.py  validate.py
(+2470 files in other folders)
